--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -167,9 +167,10 @@
                                  id="addUserGroupButton"
                                  value="#{msgs.userGroupsAdd}"
                                  icon="fa fa-plus-circle fa-lg"
+                                 iconPos="right"
                                  immediate="true"
                                  rendered="#{isEditMode || isCreateMode}"
-                                 class="callto m-10">
+                                 class="callto m-1em">
                 </p:commandButton>
             </p:tab>
             <!-- projects -->
@@ -194,9 +195,10 @@
                                  id="addProjectButton"
                                  value="#{msgs.addProjects}"
                                  icon="fa fa-plus-circle fa-lg"
+                                 iconPos="right"
                                  immediate="true"
                                  rendered="#{isEditMode || isCreateMode}"
-                                 class="callto m-10">
+                                 class="callto m-1em">
                 </p:commandButton>
             </p:tab>
             <!-- clients -->
