--- a/Kitodo/src/main/webapp/pages/workflowEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/workflowEdit.xhtml
@@ -64,6 +64,9 @@
             <p:tab title="#{msgs.details}">
                 <ui:include src="/WEB-INF/templates/includes/workflowEdit/workflowEditDetails.xhtml"/>
             </p:tab>
+            <p:tab title="#{msgs.taskList}" id="taskOrder">
+                <ui:include src="/WEB-INF/templates/includes/workflowEdit/taskList.xhtml"/>
+            </p:tab>
         </p:tabView>
     </ui:define>
 
