--- a/Kitodo/src/main/webapp/pages/rulesetEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/rulesetEdit.xhtml
@@ -76,12 +76,8 @@
                     <p:row>
                         <div>
                             <p:outputLabel for="client" value="#{msgs.client}"/>
-                            <p:selectOneMenu id="client"
-                                             converter="#{clientConverter}"
-                                             value="#{RulesetForm.ruleset.client}">
-                                <f:selectItem itemLabel="#{msgs.clientNon}" itemValue="noClient"/>
-                                <f:selectItems value="#{RulesetForm.clients}" var="client" itemValue="#{client}"
-                                               itemLabel="#{client.name}"/>
+                            <p:selectOneMenu id="client" converter="#{clientConverter}" value="#{RulesetForm.ruleset.client}">
+                                <f:selectItems value="#{RulesetForm.clients}"/>
                                 <p:ajax event="change" oncomplete="toggleSave()"/>
                             </p:selectOneMenu>
                         </div>
