Fix warnings in login page

--- a/Kitodo/src/main/webapp/pages/login.xhtml
+++ b/Kitodo/src/main/webapp/pages/login.xhtml
@@ -55,10 +55,12 @@
                             <h:outputText value="${SPRING_SECURITY_LAST_EXCEPTION.localizedMessage}"/>
                         </font>
                         <div>
-                            <label>#{msgs.username}</label><input id="username" type="text" name="username"/>
+                            <label for="username">#{msgs.username}</label>
+                            <input id="username" name="username"/>
                         </div>
                         <div>
-                            <label>#{msgs.password}</label><input id="password" type="password" name="password"/>
+                            <label for="password">#{msgs.password}</label>
+                            <input id="password" type="password" name="password"/>
                         </div>
                         <button id="login" aria-disabled="false"><span class="button-text">#{msgs.signIn}</span> <span class="ui-icon ui-c fa fa-sign-in fa-lg"/></button>
                         <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
@@ -68,9 +70,7 @@
                         #{msgs.loginNoteText}
                     </div>
 
-                    <h:panelGroup
-                            rendered="#{LoginForm.myBenutzer == null and LoginForm.alreadyLoggedIn}">
-
+                    <h:panelGroup rendered="#{LoginForm.myBenutzer == null and LoginForm.alreadyLoggedIn}">
                         <h:outputText value="#{msgs.sieSindBereitsEingeloggt}"/>
                         <br/>
                     </h:panelGroup>
