--- a/Kitodo/src/main/webapp/pages/login.xhtml
+++ b/Kitodo/src/main/webapp/pages/login.xhtml
@@ -56,7 +56,7 @@
                         </font>
                         <div>
                             <label for="username">#{msgs.username}</label>
-                            <input id="username" name="username"/>
+                            <input id="username" name="username" autocomplete="username"/>
                         </div>
                         <div>
                             <label for="password">#{msgs.password}</label>
