--- a/Kitodo/src/main/webapp/pages/taskTemplateEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskTemplateEdit.xhtml
@@ -67,7 +67,7 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
         <li><h:link value="#{msgs.prozessvorlage}" outcome="projects"/></li>
         <li><h:link value="#{msgs.editTemplate}" outcome="templateEdit?id=#{TemplateForm.template.id}"/></li>
         <li><a href="">#{msgs.taskDetails}</a></li>
