--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -214,7 +214,7 @@
                                        oncomplete="toggleSave()"
                                        update="@form">
                             <i class="fa fa-trash-o fa-lg"/>
-                            <f:param name="ID" value="#{item.id}"/>
+                            <f:param name="ID" value="#{client.id}"/>
                         </p:commandLink>
                     </p:column>
                 </p:dataTable>
