reimplemented the usage existing code to write users to ldap server

--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -98,16 +98,17 @@
                                          class="input"
                                          disabled="#{isViewMode}"
                                          placeholder="#{msgs.ldaplogin}"
-                                         value="#{BenutzerverwaltungForm.userObject.ldapLogin}"
-                                         readonly="#{BenutzerverwaltungForm.userObject.id ne null}"/>
+                                         value="#{BenutzerverwaltungForm.userObject.ldapLogin}"/>
                         </div>
                         <div>
-                            <p:outputLabel for="active" value="#{msgs.isActive}"/>
-                            <p:selectBooleanCheckbox id="active"
-                                                     styleClass="input"
-                                                     disabled="#{isViewMode}"
-                                                     value="#{BenutzerverwaltungForm.userObject.active}"
-                                                     onchange="toggleSave()"/>
+                            <p:outputLabel for="ldapGroup" value="#{msgs.ldapGroup}"/>
+                            <p:selectOneMenu id="ldapGroup"  value="#{BenutzerverwaltungForm.userObject.ldapGroup}"
+                                             disabled="#{isViewMode}"
+                                             required="#{empty param['editForm:saveButtonToggler']}">
+                                <f:selectItems value="#{LdapGruppenForm.ldapGroups}" var="ldapGroup"
+                                               itemValue="#{ldapGroup}" itemLabel="#{ldapGroup.title}"/>
+                                <p:ajax event="change" oncomplete="toggleSave()"/>
+                            </p:selectOneMenu>
                         </div>
                     </p:row>
                     <p:row>
@@ -150,8 +151,26 @@
                                                      value="#{BenutzerverwaltungForm.userObject.withMassDownload}"
                                                      onchange="toggleSave()"/>
                         </div>
+                        <div>
+                            <p:outputLabel for="active" value="#{msgs.isActive}"/>
+                            <p:selectBooleanCheckbox id="active"
+                                                     styleClass="input"
+                                                     disabled="#{isViewMode}"
+                                                     value="#{BenutzerverwaltungForm.userObject.active}"
+                                                     onchange="toggleSave()"/>
+                        </div>
                     </p:row>
                 </p:panelGrid>
+                <div>
+                    <p:commandButton id="writUserToLdapButton"
+                                     action="#{BenutzerverwaltungForm.writeUserAtLdapServer}"
+                                     value="#{msgs.ldapKonfigurationSchreiben}"
+                                     icon="fa fa-user-plus fa-lg"
+                                     immediate="true"
+                                     rendered="#{isEditMode || isCreateMode}"
+                                     class="button-filled-green">
+                    </p:commandButton>
+                </div>
             </p:tab>
             <!-- user groups -->
             <p:tab id="usergroupTab" title="#{msgs.userGroups}">
