moved creation of dummyimages to editor, added path to dummy image file to config

--- a/Kitodo/src/main/webapp/pages/incMeta/dialogs/dialogEditPages.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/dialogs/dialogEditPages.xhtml
@@ -18,7 +18,7 @@
     xmlns:p="http://primefaces.org/ui"
 >
 
-    <p:dialog id="dialogEditPagesId" header="#{msgs.pageAllocation}" resizable="false"
+    <p:dialog id="dialogEditPages" header="#{msgs.pageAllocation}" resizable="false"
               widgetVar="dialogEditPages" width="400">
         <h:form id="dialogEditPagesForm">
 
