--- a/Kitodo/src/main/webapp/pages/currentTasksEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/currentTasksEdit.xhtml
@@ -15,15 +15,7 @@
         template="/WEB-INF/templates/baseListView.xhtml"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-        xmlns:p="http://primefaces.org/ui"
-        xmlns:f="http://xmlns.jcp.org/jsf/core">
-
-    <ui:define name="metadata">
-        <f:metadata>
-            <f:viewParam name="id"/>
-            <f:viewAction action="#{AktuelleSchritteForm.loadMyStep(id)}"/>
-        </f:metadata>
-    </ui:define>
+        xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="contentHeader">
         <h3>#{msgs.detailsDesArbeitsschritts}</h3>
