--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -54,6 +54,7 @@
                             </p:panel>
                         </h:form>
                         <ui:include src="/pages/incMeta/dialogs/dialogAddDocStrucType.xhtml"/>
+                        <ui:include src="/pages/incMeta/dialogs/dialogEditPages.xhtml"/>
                     </p:panel>
                 </div>
 
