--- a/Kitodo/src/main/webapp/pages/templateEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/templateEdit.xhtml
@@ -30,6 +30,7 @@
         <h3>
             <h:outputText value="#{msgs.editTemplate} (#{TemplateForm.template.title})" rendered="#{not empty TemplateForm.template.title}"/>
             <h:outputText value="#{msgs.newTemplate}" rendered="#{empty TemplateForm.template.title}"/>
+            <h:outputText value="#{msgs.duplicateTemplate}" rendered="#{empty TemplateForm.template.title and not empty TemplateForm.template.docket}"/>
         </h3>
         <p:commandButton id="save"
                          widgetVar="save"
